Commit specification alpha

--- a/design/glossary-source.tex
+++ b/design/glossary-source.tex
@@ -1,4 +1,12 @@
 \begin{description}
+  \item[building] A collection of rooms
   \item[course] A general description of a class of sections
+  \item[locked-section] A section within a section-change description that cannot be moved
+  \item[professor] An instructor of a course; there is one professor per section
+  \item[office-hours] A time block associated with a professor; a potential conflict item to consider
+  \item[room] The meeting place of a section
   \item[section] An instantiation of a course
+  \item[section-change description] A tuple that specifies a desired change to a section's time and location
+  \item[student] A participant in a section
+  \item[unlocked-section] A section within a section-change description that may be moved potentially
 \end{description}
