--- a/design/glossary.tex
+++ b/design/glossary.tex
@@ -8,7 +8,7 @@
 \end{center}
 \vspace{.1in}
 
-In this document we describe a glossary of terms associated with the Course Conflicts application.
+In this document we describe a glossary of terms associated with the Schedule Conflict Calculator application.
 
 \input{glossary-source.tex}
 
